# BallAnalytics

./: README.md  pyproject.toml
Kalman_Approach/: helper.py  kalman_filter.py  main.py
helper_functions/: helper.py
src/: helper.py  kalman_filter.py  main.py
tests/: test_Kalman_filter.py  test_helper.py
